--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "expo/tsconfig.base",
-
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@app/*": ["src/*"]
-    }
-  }
+    "strict": true
+  },
+  "exclude": ["node_modules"],
+  "extends": "expo/tsconfig.base"
 }
