--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@reduxjs/toolkit": "^1.9.0",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "moti": "^0.21.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-is": "^18.2.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-shadow-2": "^7.0.6",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
